# open-prompt-manager

./: .gitignore  .gitleaks.toml  .sast-exceptions.json  .sca-exceptions.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  deploy.sh  docker-compose.yml  domainRego.sh  quality-report.html
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/agents/: release-notes.agent.md  security-checker.agent.md
.github/workflows/: ci.yml  deploy.yml  (+5 more)
backend/: .dockerignore  Dockerfile  main.py  requirements-mutation.txt  requirements-test.txt  requirements.txt  setup.cfg
docs/: RELEASE_PROCESS.md  SECRETS_SCAN_POLICY.md
e2e-test/: api-test-plan.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  stryker.conf.cjs  tailwind.config.js  vite.config.js
k6/: opm-simple.js
mcp-package-node/: README.md  package-lock.json  package.json
mcp-package-python/: README.md  pyproject.toml
mcp-package-python/open_prompt_manager_mcp/: __init__.py  __main__.py  server.py
mcp-package-python/tests/: test_server.py
migration/: 2026-apr-09-mig-001.md
operations/: opm-cloud-cost-dashboard.json  opm-dashboard.json  seed-report.json
splm/: ci.fail-first  security.iac.report.md  uplift.plan.md
terraform/: .terraform.lock.hcl  alb.tf  certificate.tf  dns.tf  ecr.tf  ecs.tf  iam.tf  install.md  outputs.tf  rds.tf  security_groups.tf  variables.tf  versions.tf  vpc.tf
(+100 files in other folders)
