[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-prompt-manager-mcp"
version = "2.2.4"
description = "MCP server for Open Prompt Manager — connect Claude Desktop to your prompt library"
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
keywords = ["mcp", "claude", "prompt-management", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.26.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.scripts]
open-prompt-manager-mcp = "open_prompt_manager_mcp.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["open_prompt_manager_mcp*"]
